package net.pogo.game.engine;

public class DisplayComponent
{
    public String textureMesh;
    public Object textureMeshObject;
    public String texture;
    public Object textureObject_l;
    public Object textureObject_r;
}
