package net.pogo.game.engine;

import net.pogo.game.common.Vector3;

public class MoveNode extends Node
{
  int LifeCycleState = 0;
  public PositionComponent position;
  public VelocityComponent velocity;
}
