package net.pogo.game.engine;

import net.pogo.game.common.Vector3;

public class Node
{
  public int entityID;
}
