package net.pogo.game.engine;

import net.pogo.game.common.Transform;


public class PositionComponent
{
  public Transform position = new Transform();
}
